tests/fixtures/security/certs/invalid/broken_chain.store
store_id=broken-chain-store
store_version=1
updated_at_utc=2026-03-11T08:30:00Z
revocation_source=file://revocation/cache/root
record|roots|1111111111111111111111111111111111111111111111111111111111111111|CN=Root CA|CN=Root CA|root|2026-01-01T00:00:00Z|2036-01-01T00:00:00Z|1000
record|intermediates|5555555555555555555555555555555555555555555555555555555555555555|CN=Intermediate CA|CN=Root CA|intermediate|2026-01-01T00:00:00Z|2030-01-01T00:00:00Z|1005
record|intermediates|6666666666666666666666666666666666666666666666666666666666666666|CN=Intermediate CA|CN=Root CA|intermediate|2026-01-01T00:00:00Z|2030-01-01T00:00:00Z|1006
record|device_certs|4444444444444444444444444444444444444444444444444444444444444444|CN=Media Server|CN=Intermediate CA|client|2026-01-01T00:00:00Z|2028-01-01T00:00:00Z|1004
